appId: com.anonymous.MightyMammoths
---
- setLocation:
    latitude: 45.4954
    longitude: -73.5783
- tapOn:
    id: "marker-CL"
- assertVisible:
    id: "setDestinationButton"
- tapOn:
    id: "setDestinationButton"