appId: com.anonymous.MightyMammoths
---
- assertVisible:
    id: "delete-plan-button"

- tapOn:
    id: "delete-plan-button"

- tapOn:
    point: "67%,57%"